fixed styling issues when viewed on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -21,7 +21,8 @@ body {
 
 @mixin article ($background-color) {
   padding: 25px;
-  background-color: $background-color
+  background-color: $background-color;
+  text-align: center;
 }
 
 .container {
@@ -91,7 +92,6 @@ h1, h2 {
 }
 
 .icon-container {
-  // grid-column: 2;
   justify-self: end;
   grid-area: icons;
 }
@@ -116,7 +116,7 @@ h1, h2 {
   grid-row: 3;
   justify-self: center;
   display: grid;
-  grid-template-columns: repeat(3, minmax(150px, 300px));
+  grid-template-columns: repeat(3, minmax(90px, 300px));
   grid-template-rows: repeat(3, auto);
   grid-auto-flow: row dense;
   padding: 15px;
@@ -179,5 +179,18 @@ h1, h2 {
 
   .title-container { 
     justify-self: center;
+  }
+
+  .articles-container {
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+  }
+
+  #article-four {
+    grid-column: span 1;
+  }
+
+  #article-seven {
+    grid-column: span 1;
   }
 }
